--- a/2008-s0-1-1a.tex
+++ b/2008-s0-1-1a.tex
@@ -1,4 +1,186 @@
 \section*{MATH1231/1241 Algebra S2 2007 Test 1 Version 1B}
 \begin{enumerate}
-    \item 
+    % Q1: matrix subspace
+    \item
+        We have $S = \left\{ \left. \begin{pmatrix}
+            a_{11} & a_{12} \\
+            a_{21} & a_{22} \\
+        \end{pmatrix} \right| a_{11} + a_{12} = 3a_{22} \right\}$.
+
+        \begin{itemize}
+            \item
+                Clearly, $\v{0} \in S$:
+                $$0 + 0 = 3(0)$$
+                and so $S$ is not empty.
+
+            \item
+                Suppose $A, B \in S$. Then,
+                \begin{align*}
+                    &\left\{\begin{matrix}
+                        [A]_{11} + [A]_{12} = 3[A]_{22} \\
+                        [B]_{11} + [B]_{12} = 3[B]_{22}
+                    \end{matrix}\right. \\
+                    \implies
+                    &[A+B]_{11} + [A+B]_{12} = 3[A+B]_{22} \\
+                    \implies
+                    &(A + B) \in S
+                \end{align*}
+
+                And so $S$ is closed under vector addition.
+
+            \item
+                Suppose $A \in S$ and $\lambda \in \R$. Then,
+                \begin{align*}
+                    [A]_{11} + [A]_{12} &= 3[A]_{22} \\
+                    \lambda[A]_{11} + \lambda[A]_{12} &= \lambda[A]_{22} \\
+                    [\lambda A]_{11} +  [\lambda A]_{12} &=  [\lambda A]_{22} \\
+                    \implies
+                    \lambda A \in S
+                \end{align*}
+
+                And so $S$ is closed under scalar multiplication.
+        \end{itemize}
+
+        It follows that set $S$ is a subspace of the vector
+        space $\M_{2,2}(\R)$ by the Subspace Theorem.
+
+        % Q2: linear (in)dependence
+    \item
+        \begin{enumerate}
+            \item
+                Vectors $\v{v_1}, \v{v_1}, \dots, \v{v_n} \in V$ are
+                linearly independent if there exist scalars
+                $\lambda_1, \dots, \lambda_n$, not all zero,
+                such that the following equation holds:
+                $$\lambda_1\v{v_1} + \lambda_2\v{v_2} + \dots + \lambda_n\v{v_n} = \v{0}$$
+            \item
+                First, we rewrite the matrices in vector form. We need
+                to establish if the following vectors are linearly
+                dependent:
+                $$
+                \v{A'_1} = \begin{pmatrix}1 \\ 2 \\ 2 \\ 1\end{pmatrix};~
+                \v{A'_2} = \begin{pmatrix}0 \\ 1 \\ 1 \\ 0\end{pmatrix};~
+                \v{A'_3} = \begin{pmatrix}2 \\ 1 \\ 2 \\ 1\end{pmatrix}
+                $$
+
+                They are linearly dependent if and only if the system of
+                linear equations represented by the following augmented
+                matrix has more than one solution.
+                $$
+                    \begin{amatrix}{3}
+                        1 & 0 & 2 & 0 \\
+                        2 & 1 & 1 & 0 \\
+                        2 & 1 & 2 & 0 \\
+                        1 & 0 & 1 & 0 \\
+                    \end{amatrix}
+                $$
+
+                Row-reducing, we obtain
+
+                \begin{math}
+                    \xrightarrow[R4 = R4 - R1]{R2 = R2 - 2R1;~ R3 = R3 - 2R1}
+                    \begin{amatrix}{3}
+                        1 & 0 & 2  & 0 \\
+                        0 & 1 & -3 & 0 \\
+                        0 & 1 & -2 & 0 \\
+                        0 & 0 & -1 & 0 \\
+                    \end{amatrix}
+                    \xrightarrow{R3 = R3 - R2}
+                    \begin{amatrix}{3}
+                        1 & 0 & 2  & 0 \\
+                        0 & 1 & -3 & 0 \\
+                        0 & 0 & 1  & 0 \\
+                        0 & 0 & -1 & 0 \\
+                    \end{amatrix} \\
+                    \xrightarrow{R4 = R4 + R3}
+                    \begin{amatrix}{3}
+                        1 & 0 & 2  & 0 \\
+                        0 & 1 & -3 & 0 \\
+                        0 & 0 &  1 & 0 \\
+                        0 & 0 & 0  & 0 \\
+                    \end{amatrix}
+                \end{math}
+
+                The last column is non-leading, and there are no other
+                non-leading columns, and therefore the system has
+                exactly one solution.
+
+                Therefore the vectors, and hence the corresponding
+                matrices, are linearly independent.
+        \end{enumerate}
+
+        % Q3: basis
+    \item
+        \begin{enumerate}
+            \item
+                To find a basis for $W$, we consider the leading columns
+                of a matrix which columns are the vectors
+                $\v{v_1}, \dots, \v{v_4}$ when reduced to REF. \\[5mm]
+
+                \begin{math}
+                    \begin{pmatrix}
+                        1 & 2 & -1 & 1 \\
+                        3 & 7 &  0 & 1 \\
+                        1 & 1 & -4 & 3 \\
+                    \end{pmatrix}
+                    \xrightarrow[R3 = R3 - R1]{R2 = R2 - 3R1}
+                    \begin{pmatrix}
+                        1 &  2 & -1 &  1 \\
+                        0 &  1 &  3 & -2 \\
+                        0 & -1 & -3 &  2 \\
+                    \end{pmatrix}
+                    \xrightarrow{R3 = R3 + R2}
+                    \begin{pmatrix}
+                        1 &  2 & -1 &  1 \\
+                        0 &  1 &  3 & -2 \\
+                        0 &  0 &  0 &  0 \\
+                    \end{pmatrix}
+                \end{math} \\[5mm]
+
+                The first and second columns are leading, which
+                correspond to the vectors $\v{v_1}, \v{v_2}$.
+                Therefore, the vectors $\v{v_1}, \v{v_2}$ form the basis
+                for $W$.
+
+            \item
+                Such vector is $\v{v_4}$.
+
+                We want to solve
+                $$\lambda_1 \v{v_1} + \lambda_2 \v{v_2} + \lambda_4 \v{v_4} = \v{0}$$
+
+                Forming an augmented matrix and row-reducing, we obtain: \\[5mm]
+
+                \begin{math}
+                    \begin{amatrix}{3}
+                        1 & 2 &  1 & 0 \\
+                        3 & 7 &  1 & 0 \\
+                        1 & 1 &  3 & 0 \\
+                    \end{amatrix}
+                    \xrightarrow[R3 = R3 - R1]{R2 = R2 - 3R1}
+                    \begin{amatrix}{3}
+                        1 &  2 &  1 & 0 \\
+                        0 &  1 & -2 & 0 \\
+                        0 & -1 &  2 & 0 \\
+                    \end{amatrix}
+                    \xrightarrow{R3 = R3 + R2}
+                    \begin{amatrix}{3}
+                        1 &  2 &  1 & 0 \\
+                        0 &  1 & -2 & 0 \\
+                        0 &  0 &  0 & 0 \\
+                    \end{amatrix}
+                \end{math} \\[5mm]
+
+                Third column is non-leading. If we set $\lambda_3 = 1$
+                and back-substitute, we obtain:
+                \begin{align*}
+                    \lambda_2 - 2\lambda_3 = 0 &\implies
+                        \lambda_2 = 2\lambda_3 = 2 \\
+                    \lambda_1 + 2\lambda_2 + \lambda_3 = 0 &\implies
+                        \lambda_1 = -5\lambda_3 = -5
+                \end{align*}
+                and thus obtain the required result,
+                $$-5\v{v_1} + 2\v{v_2} + \v{v_4} = \v{0}$$
+                that is,
+                $$5\v{v_1} - 2\v{v_2} = \v{v_4}$$
+        \end{enumerate}
 \end{enumerate}
