--- a/algebra-one.tex
+++ b/algebra-one.tex
@@ -7,6 +7,7 @@
 
 \newcommand{\R}{\mathbb{R}}
 \renewcommand{\P}{\mathbb{P}}
+\newcommand{\M}{\mathbb{M}}
 
 \renewcommand{\v}[1]{\mathbf{#1}}
 \newcommand{\x}{\v{x}}
