--- a/2008-s0-1-1a.tex
+++ b/2008-s0-1-1a.tex
@@ -1,4 +1,4 @@
-\section*{MATH1231/1241 Algebra S2 2007 Test 1 Version 1B}
+\section*{MATH1231/1241 Algebra S0 2008 Test 1 Version 1A}
 \begin{enumerate}
     % Q1: matrix subspace
     \item
