Simplify Subspace Thm proofs

--- a/2007-s2-1-1b.tex
+++ b/2007-s2-1-1b.tex
@@ -29,7 +29,7 @@
                         And so $S$ is closed under vector addition.
 
                     \item
-                        Suppose $\x = (x_1, \dots, x_4)^T \in S,~ \lambda \in \R$.
+                        Further suppose $\lambda \in \R$.
                         Then,
                         \begin{align*}
                             x_1 - 5x_3 &= 2x_4 \\
