--- a/2008-s0-1-1a.tex
+++ b/2008-s0-1-1a.tex
@@ -29,7 +29,7 @@
                 And so $S$ is closed under vector addition.
 
             \item
-                Suppose $A \in S$ and $\lambda \in \R$. Then,
+                Further, suppose $\lambda \in \R$. Then,
                 \begin{align*}
                     [A]_{11} + [A]_{12} &= 3[A]_{22} \\
                     \lambda[A]_{11} + \lambda[A]_{12} &= \lambda[A]_{22} \\
