--- a/algebra-one.tex
+++ b/algebra-one.tex
@@ -24,6 +24,13 @@
 }
 
 \begin{document}
+    \begin{center}
+        {\Large\bf Solutions to MATH1241 Test 1}
+    \end{center}
+
+    These solutions were written up and typed up by Evgeny Martynov. If you spot any errors, hit me up via FB or whatever.
+    \vspace{15mm}
+
     \input{2007-s2-1-1b}
     \input{2008-s0-1-1a}
     \input{2008-s2-1-3b}
