--- a/2008-s0-1-1a.tex
+++ b/2008-s0-1-1a.tex
@@ -49,10 +49,12 @@
         \begin{enumerate}
             \item
                 Vectors $\v{v_1}, \v{v_1}, \dots, \v{v_n} \in V$ are
-                linearly independent if there exist scalars
-                $\lambda_1, \dots, \lambda_n$, not all zero,
-                such that the following equation holds:
+                linearly independent if the only combination of scalars
+                $\lambda_1, \dots, \lambda_n$ for which the following
+                equation holds:
                 $$\lambda_1\v{v_1} + \lambda_2\v{v_2} + \dots + \lambda_n\v{v_n} = \v{0}$$
+                is
+                $$\lambda_1 = \lambda_2 = \dots = \lambda_n = 0$$
             \item
                 First, we rewrite the matrices in vector form. We need
                 to establish if the following vectors are linearly
